--- a/composer.json
+++ b/composer.json
@@ -17,7 +17,8 @@
         "php": ">=5.4.0",
         "yiisoft/yii2": "~2.0.6",
         "yiisoft/yii2-bootstrap": "~2.0.0",
-        "yiisoft/yii2-swiftmailer": "~2.0.0 || ~2.1.0"
+        "yiisoft/yii2-swiftmailer": "~2.0.0 || ~2.1.0",
+	"philippfrenzel/yii2masonry": "*"
     },
     "require-dev": {
         "yiisoft/yii2-debug": "~2.0.0",
@@ -31,6 +32,15 @@
         "fxp-asset": {
             "enabled": false
         }
+    },
+"extra": {
+        "asset-repositories": [
+  {
+    "name": "bower-asset/eventemitter",
+    "type": "bower-vcs",
+    "url": "git://github.com/Wolfy87/EventEmitter.git"
+  }
+]
     },
     "repositories": [
         {
